--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.github.bumptech.glide:glide:4.2.0'
     compile 'com.android.support:design:26.+'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
